--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.5.4",
-    "vue": "^3.5.26"
+    "vue": "^3.5.26",
+    "vue-router": "^5.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.3",
